--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "^5.0.1",
     "@types/react": "^17.0.48",
     "@types/react-router-dom": "^5.3.2"
   },
